[package]
name = "rxa"
version = "0.1.0"
edition = "2021"
description = "Cross-platform alternative to exa rust crate that is also modern to ls "
authors = ["UnknownRori <68576836+UnknownRori@users.noreply.github.com>"]
categories = ["command-line-utilities"]
rust-version = "1.73.0"
exclude = []
readme = "README.md"
license = "GPL-3.0 License"
repository = "https://github.com/UnknownRori/rxa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.7"
console = "0.15.7"
faccess = "0.2.4"
